ingress_grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-v1
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx


spec:
  rules:
  - host: wizardneon.link
    http:
      paths:
      - pathType: Prefix
        path: /grafana/
        backend:
          service:
            name: grafana
            port:
              number: 80
